# pytest-sqlite-poc

./: .flake8  .gitignore  .pre-commit-config.yaml  CODE_QUALITY_PLAN.md  CONTRIBUTING.md  Dockerfile  README.md  README_MULTI_DB.md  Taskfile.yml  docker-compose.yml  pyproject.toml  pytest.ini
data/: sample_data.py
data/sql/: initial_schema.sql
data/sql/functions/: calculate_postage.sql  generate_batch.sql  validate_address.sql
data/sql/migrations/: 001_add_columns.sql  002_modify_constraints.sql  003_data_transform.sql
src/database/: complex_procedures.py  connection.py  db_interface.py  functions.py  postgres_procedures.py  schema.py  schema_manager.py
src/migrations/: __init__.py  data_migrations.py  schema_migrations.py
tests/: __init__.py  conftest.py  conftest_multi_db.py  pytest_multi_db.py  test_complex_procedures.py  test_data_helper.py  test_data_import.py  test_functions.py  test_integration.py  test_migrations.py  test_multi_db.py  test_postgres_procedures.py
