[tool.poetry]
name = "pytest-sqlite-poc"
version = "0.1.0"
description = "POC for testing PyTest capabilities with SQLite for database operations"
authors = ["Phil <your.email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
faker = "^24.1.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.5.1"
bandit = "^1.7.5"
flake8-docstrings = "^1.7.0"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''/(\n  | .venv
  | build
  | dist
)/'''

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = ["src", "tests", "data"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = false
strict_optional = false

# Explicitly tell mypy that src is a package
explicit_package_bases = true
namespace_packages = true

# Per-module options
[[tool.mypy.overrides]]
module = "tests.*"
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = "data.*"
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = false

[tool.bandit]
targets = ["src", "data"]
exclude = ["tests", ".venv", "build", "dist"]
